Added functions to create a reusable message div and insert preselected messages from and exported object

--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 
 <body>
 
+
   <div id="output-div"></div>
 
-  <!-- <div class="cardDiv6"></div>
-  <div class="cardDiv6"></div>
-  <div class="cardDiv6"></div>
-  <div class="cardDiv6"></div>
-  <div class="cardDiv6"></div>
-  <div class="cardDiv6"></div> -->
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/typed-text/src/jquery.typedText.js"></script>
   <script src="dist/bundle.js"></script>
 </body>
 </html>
